--- a/My_portfolio/index.html
+++ b/My_portfolio/index.html
@@ -142,7 +142,7 @@
               </div>
             </div>
             <footer width="100%" height="400px" class="container-fluid" id="Contact"> 
-              <p class="adjust text-light">copyright@RochitaSharma,2021</p>
+              <p class="adjust text-light">copyright@RochitaSharma  2021</p>
               <div class="row">
                 <div class="col">
            <ul class="foot float-right" >
