Change Text in achievement setion

--- a/My_portfolio/index.html
+++ b/My_portfolio/index.html
@@ -134,9 +134,9 @@
                   <div class="offset-lg-5 offset-sm-2 offset-xs-2 "><img src="certificates.jpeg" alt="these are my achievements" width="300px" height="200px"></div>
                   <ul class="offset-lg-3 ">
                     <li>Won 1st prize in PowerPoint Persentation on the topic Food Adulteration in Grade 9th.</li>
-                    <li>Earned 3rd prize in logo designing in MS Flash in Grade 8th.</li>
-                    <li>Earned 1st prize in Solo Classical Dance.</li>
-                    <li>Earned 2nd prize in Dance in cultural night at NCC training Camp.</li>
+                    <li>Won 3rd prize in logo designing in MS Flash in Grade 8th.</li>
+                    <li>Won 1st prize in Solo Classical Dance.</li>
+                    <li>Won 2nd prize in Dance in cultural night at NCC training Camp.</li>
                   </ul>
                 </div>
               </div>
