Made some corrections

--- a/My_portfolio/index.html
+++ b/My_portfolio/index.html
@@ -60,8 +60,8 @@
                       <h2 class="common offset-lg-2 mr-lg-5 ">About Me</h2>
                       <p class="offset-lg-4">Hello,I'm Rochita Sharma.<br> 
                           A web-developer <br>
-                          learning HTML, CSS, Bootstrap and Javascrpit.<br>
-                          With this I'm learning c++ for DSA.<br>
+                          Learning HTML, CSS, Bootstrap and Javascript.<br>
+                          With this I'm learning C++ for DSA.<br>
                           And a fun fact I'm having diploma in classical dance.
                       </p>
                   </div>
@@ -73,11 +73,11 @@
                     <h2 class="common offset-lg-2 mr-lg-5">Hobbies</h2>
                     <ul class="offset-lg-3">
                         <li>Developing and learning new Skills.</li>
-                        <li>Dancing specially classical in which I'm trained in.</li>
+                        <li>Dancing especially classical in which I'm trained in.</li>
                         <li>Spending leisure time in parks or doing meditation.</li>
                         <li>Playing Basketball, and Badminton.</li>
                         <li>Doing art and crafts and loves decorating things.</li>
-                        <li>gardening and propagating new plants from their cuttings.</li>
+                        <li>Gardening and propagating new plants from their cuttings.</li>
                     </ul>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <br>HTML, CSS, Bootstrap<br>
                     and learning DSA with C++.<br>
                     Apart from technical skills I learn Odissi Classical Dance and art.
-                    <br> and learnt a laguage German apart from English.
+                    <br> and learnt a language German apart from English.
                   </p>
                 </div>
               </div>
